--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -1,6 +1,18 @@
 version: '3.8'
 
 services:
+  postgres-heroes:
+    image: postgres:16-alpine
+    restart: always
+    environment:
+      POSTGRES_USER: ${HERO_DB_USER}
+      POSTGRES_PASSWORD: ${HERO_DB_PASSWORD}
+      POSTGRES_DB: ${HERO_DB_NAME}
+      POSTGRES_DATABASE_URL: ${HERO_DATABASE_URL}
+    ports:
+      - "5432:5432"
+    volumes:
+      - postgres_heroes_data:/var/lib/postgresql/data
   backend:
     build:
       context: ./superhero-backend
@@ -8,8 +20,11 @@ services:
     ports:
       - "5000:5000"
     environment:
-      - PORT=5000
-      - NODE_ENV=development
+      PORT: 5000
+      DATABASE_URL: ${HERO_DATABASE_URL}
+      NODE_ENV: development
+    depends_on:
+      - postgres-heroes
 
   frontend:
     build:
@@ -21,3 +36,6 @@ services:
       - REACT_APP_API_URL=http://backend:5000
     depends_on:
       - backend
+
+volumes:
+  postgres_heroes_data:
