--- a/superhero-backend/Dockerfile
+++ b/superhero-backend/Dockerfile
@@ -9,8 +9,10 @@ RUN npm ci
 
 COPY . .
 
+RUN npx prisma generate
+
 RUN npm run build
 
 EXPOSE 5000
 
-CMD ["node", "dist/main"]
+CMD ["node", "dist/src/main"]
