--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -21,10 +21,11 @@ services:
       - "5000:5000"
     environment:
       PORT: 5000
-      DATABASE_URL: ${HERO_DATABASE_URL}
+      DATABASE_URL: ${DATABASE_URL}
       NODE_ENV: development
     depends_on:
       - postgres-heroes
+    command: sh -c "npm run wait-for-db && npm run db:push && npm run start:prod"
 
   frontend:
     build:
