--- a/superhero-backend/Dockerfile
+++ b/superhero-backend/Dockerfile
@@ -1,15 +1,16 @@
-
 FROM node:20-alpine
 
 WORKDIR /usr/src/app
 
 COPY package*.json ./
+COPY prisma ./prisma/
+COPY prisma.config.ts ./
 
 RUN npm ci
 
-COPY . .
-
 RUN npx prisma generate
+
+COPY . .
 
 RUN npm run build
 
