--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -36,7 +36,8 @@ services:
     ports:
       - "3000:3000"
     environment:
-      - REACT_APP_API_URL=http://backend:5000
+      - NEXT_DOCKER_API_URL=http://backend:5000
+      - NEXT_PUBLIC_API_URL=http://localhost:5000
     depends_on:
       - backend
 
