--- a/.env.example
+++ b/.env.example
@@ -3,4 +3,7 @@ HERO_DB_PASSWORD = hero
 HERO_DB_NAME = hero
 HERO_DATABASE_URL = "postgresql://hero:hero@localhost:5432/hero?schema=public"
 
+NEXT_PUBLIC_API_URL="http://localhost:5000"
+NEXT_DOCKER_API_URL="http://backend:5000"
+
 DATABASE_URL = "postgresql://hero:hero@postgres-heroes:5432/hero?schema=public"
