--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -36,8 +36,8 @@ services:
     ports:
       - "3000:3000"
     environment:
-      - NEXT_DOCKER_API_URL=http://backend:5000
-      - NEXT_PUBLIC_API_URL=http://localhost:5000
+      - NEXT_DOCKER_API_URL=${NEXT_DOCKER_API_URL}
+      - NEXT_PUBLIC_API_URL=${NEXT_PUBLIC_API_URL}
     depends_on:
       - backend
 
